--- a/phin/css/app.css
+++ b/phin/css/app.css
@@ -157,44 +157,22 @@ span.highlight {
 	margin-left: 0.5em;
 	margin-right: 0.5em;
 }
-.container {
-  line-height: 1.4;
-  text-align: center;
-  padding: 44px;
-  color: #333;
-}
 
-h1 {
-  font-size: 50px;
+p{
+  font-size: 2em;
 }
-
-p {
-  font-size: 18px;
+.realistic-marker-highlight{
+  position:relative;
 }
-p small {
-  font-size: 80%;
-  color: #666;
-}
-
-.highlight-container, .highlight {
-  position: relative;
-}
-
-.highlight-container {
-  display: inline-block;
-}
-.highlight-container:before {
-  content: " ";
-  display: block;
-  height: 90%;
-  width: 100%;
-  margin-left: -3px;
-  margin-right: -3px;
-  position: absolute;
-  background: #ffd500;
-  transform: rotate(2deg);
-  top: -1px;
-  left: -1px;
-  border-radius: 20% 25% 20% 24%;
-  padding: 10px 3px 3px 10px;
+.realistic-marker-highlight:before{
+  content:"";
+  background-color:#ff6db7;
+  width:100%;
+  height:1em;
+  position:absolute;
+  z-index:-1;
+  filter:url(#marker-shape);
+  left:-0.25em;
+  top:0.1em;
+  padding:0 0.25em;
 }
