--- a/phin/css/app.css
+++ b/phin/css/app.css
@@ -164,7 +164,7 @@ span.highlight {
 }
 .realistic-marker-highlight:before{
   content:"";
-  background-color:#ff6db7;
+  background-color:#8a05e3;
   width:100%;
   height:1em;
   position:absolute;
