--- a/phin/css/app.css
+++ b/phin/css/app.css
@@ -165,6 +165,7 @@ span.highlight {
 .realistic-marker-highlight:before{
   content:"";
   background-color:#8a05e3;
+  color: #ffffff;
   width:100%;
   height:1em;
   position:absolute;
