--- a/phin/css/app.css
+++ b/phin/css/app.css
@@ -160,12 +160,12 @@ span.highlight {
 
 .realistic-marker-highlight{
   position:relative;
+  color: #ffffff;
 }
 
 .realistic-marker-highlight:before{
   content:"";
-  background-color:#8a05e3;
-  color: #ffffff;
+  background-color:#1595bf;
   width:100%;
   height:1em;
   position:absolute;
