--- a/phin/css/app.css
+++ b/phin/css/app.css
@@ -63,6 +63,14 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@font-face {
+  font-family: 'Lato-bold';
+  font-style: italic;
+  font-weight: 700;
+  src: local('Lato Bold'), local('Lato-Bold'), url(https://fonts.gstatic.com/s/lato/v15/S6u9w4BMUTPHh6UVSwiPGQ3q5d0.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 a {
   color: #1772d0;
   text-decoration: none;
@@ -160,12 +168,13 @@ span.highlight {
 
 .realistic-marker-highlight{
   position:relative;
-  color: #ffffff;
+  color:#ffffff;
 }
 
 .realistic-marker-highlight:before{
   content:"";
-  background-color:#1595bf;
+  background-color:#4e119e;
+  /* color: #ffffff; */
   width:100%;
   height:1em;
   position:absolute;
